--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 
-- admin
-	- View logs
+- Change date fields and names to "timestamp" of type:
+        timestamp int NOT NULL default '0'
+
 	- View transactions
 	- View registrations
 		- View logs and transactions at the bottom of each registration
@@ -12,6 +13,8 @@
 	- Ask for last 4 digits of credit card number and expiration date
 	- Print lines of registrations
 	- Maybe allow for upgrades this way?
+
+- PAGING!!
 
 - reg/
 	- Rename reg_trans.card_num to reg_trans.cc_num
