--- a/TODO
+++ b/TODO
@@ -1,10 +1,14 @@
 
-	- View transactions
+
 	- View registrations
-		- View logs and transactions at the bottom of each registration
+		- reg_admin::reg()
+		- Member data in a fieldset
+		- Appropriate log entries in a fieldset
+		- Appropriate transactions in a fieldset
 		- Editing for registration
 		- Note taking via logs?
-		- I may need to split out "registrations" into a separate menu item?
+
+	- Rename reg_trans.badge_cost to just cost?
 
 - reg/verify - Let a user verify their reigstration
 	- Ask for last 4 digits of credit card number and expiration date
@@ -19,7 +23,8 @@
 
 
 - reg/
-	- Rename reg_trans.card_num to reg_trans.cc_num
+	- On successful registration, stash stuff to display in $_SESSION
+		and go to a pre-filled verify page?
 	- Have reg::get_cc_name() call reg::get_cc_last_4()
 	- Save only last 4 digits of CC num to reg_trans.card_num
 	- When a transaction fails, log it to reg_log with reg::get_cc_name()
