--- a/TODO
+++ b/TODO
@@ -6,9 +6,15 @@
 		- Search
 		- Adding new registrations
 
+- PAGING!!
 	- User viewing secondary menu:
 		- Add note?
 		- Refund?  Balance adjustment?
+	- User editing:
+		- Button to refund?
+
+- Rename reg_log to reg_log_view and move log functions from reg into reg_log?
+
 
 	- Search registrations
 		- Redirect back to search page with a query string like in onsitereg
@@ -22,7 +28,6 @@
 
 - Some utility to print unused badge numbers
 
-- PAGING!!
 - is date_validate() being used on the reg form for dates?
 - check on registration to make sure membership level is valid
 	- Write a get_levels() function to return current, valid levels?
