Added searching, made a few other fixes.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@27 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
 
 
-- Write search screen
-	reg/search.class.php
+- Replace instances of db_escape_string()!  It is Postgres-specific!
 
 - Track down bug with not forcing the badge number on a manual add.
-	- Maybe put the badge code into the section before calling the new/update code?
 	- Generic "isValidNumber()" function?
 		- Check for positive and an integer
 	- Generic "isValidMoney()" function?
