--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 
 
-- Replace instances of db_escape_string()!  It is Postgres-specific!
+- Create fake data for names, badge names, and states
 
 - Track down bug with not forcing the badge number on a manual add.
 	- Generic "isValidNumber()" function?
