Added "add note" functionality to memberships. Added additional fields to log detail, and made them clickable to the member.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@35 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -1,20 +1,12 @@
 
 
-- Add reg_level.description field
-
-	- View registrations
-		- Note taking via logs?
-			- Handle very long fields
-				- I think Drupal has a function for this.  Check watchdog.
-
-	- User viewing secondary menu:
-		- Add note?
-			- admin/reg/members/view/35/addnote
-		- Refund?  Balance adjustment?
-			- admin/reg/members/view/35/addtrans
-				- Amounts (badge, donation)
-			- admin/reg/members/view/35/cancel
-				- Amounts prefilled in (0 for donation)
+- User viewing secondary menu:
+	- Refund?
+		- admin/reg/members/view/35/addtrans
+			- Amounts (badge, donation)
+	- Balance adjustment?
+		- admin/reg/members/view/35/cancel
+			- Amounts prefilled in (0 for donation)
 
 - Financials
 	- Add to reg table: badge_balance, donation_balance
