Refactored cancellation and adjustment forms to the reg/admin/ directory in their own classes.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@40 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -1,7 +1,4 @@
 
-
-- Refactor cancellation and adjustment form into reg/admin/cancel.class.php
-
 - Post pics:
 	- Search page and results
 	- Cancel a membership
@@ -20,6 +17,9 @@
 
 - Manually adding registrations
 	- Dropdown to list payment methods
+		- Payment Type
+		- Amount, Donation
+	- Saving should log a transaction
 
 - reg/verify - Let a user verify their reigstration
 	- Ask for last 4 digits of credit card number and expiration date
