Changed birthdate field to a timestamp as per the rest of Drupal. Updated code accordingly. Added validation code to catch a birthdate of today.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@72 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -3,9 +3,8 @@
 	- PHP's checkdate() function
 
 - reg form
-	- Check the birthdate field, if set to today, throw an error
 	- Add edit links for each of the membership types
-		- Wrote reg::is_admin()
+		- Write reg::is_admin()
 	- On success, if further questions, email the address
 		- Link to FAQ?
 			- Make in settings?
