Wrote reg::is_admin().
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@73 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 
 - reg form
 	- Add edit links for each of the membership types
-		- Write reg::is_admin()
+		- Use reg::is_admin()
 	- On success, if further questions, email the address
 		- Link to FAQ?
 			- Make in settings?
