Wrote reg_admin::variable_set() to wrap and log configuration change settings.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@78 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -10,6 +10,8 @@ TODO
 	- When updated, save the old version in the log
 	- Form for edting
 	- settings/messages
+	- store reg_messages in sample_data
+	- store reg_emails in sample_data
 
 - reg form
 	- On success, if further questions, email the address
