Added support for sending email. Created reg_email class.  Made it be the first non-static class in the system 	so that I can better map out dependencies and eventually write unit tests. Added a debugging mode to prevent the sending of email.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@90 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -3,20 +3,21 @@
 Done
 ====
 
-
-TODO
-====
-
-- http://dev.mysql.com/doc/refman/5.0/en/innodb-foreign-key-constraints.html
-	- Set up some foreign key constraints
-
 - Email sending
 	- Create reg_email class
 		- email($email_address, $subject, $message_name, $data)
 	- "Send email" button for each Complete member
 		- Will print a form with the email to be sent
+- Add config to suppress email
 
-	- "basically, when a badge number is assigned"
+
+TODO
+====
+
+- Update ledger from reg_form even when manually adding.
+	Note the payment type in the legder.
+
+- Remove variable_get() to email addresses
 
 - Credit card gets charged twice with a captcha.  Oops.
 	- Write my own little captcha in reg_captcha?
